@@ -1,5 +1,9 @@
 v1.x.x.x - unreleased
+ CHANGED: Add support of interlaced flags in software mode for MPCVideoDecoder filter
+ CHANGED: D3DFullScreen mode now takes into account the monitor to full-screen mode in options, if monitor is not specified on the command line.
+ CHANGED: Auto-hide playlist on fullscreen(feature request #2219561) 
  CHANGED: Detours library updated to v2.1
+ FIXED  : Support for Theora stream in Ogg internal splitter
 
 v1.2.908.0 - 30.Nobember 2008
 ======================
